@@ -90,6 +90,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-29 sam. 02:22]--[2016-10-29 sam. 03:55] =>  1:33
      CLOCK: [2016-10-28 ven. 03:41]--[2016-10-28 ven. 03:52] =>  0:11
      CLOCK: [2016-10-28 ven. 02:47]--[2016-10-28 ven. 03:34] =>  0:47
      CLOCK: [2016-10-27 jeu. 00:06]--[2016-10-27 jeu. 00:59] =>  0:53
@@ -173,11 +174,11 @@
   in =GameEngine::frameRenderingQueued(Ogre::FrameEvent const&)=
 - [X] Test if resizing the renderwindow works properly
   see http://www.ogre3d.org/tikiwiki/tiki-index.php?page=Basic+Tutorial+6
-- [-] Add a NYI layout (A simple dialog with Not Yet Implemented text)
+- [X] Add a NYI layout (A simple dialog with Not Yet Implemented text)
   Possibly with a parameter : unimplemented feature
   - [X] Create a new layout NyiDialog.layout
   - [X] Try this layout until it works
-  - [-] Make this a real class with the featurename parameter
+  - [X] Make this a real class with the featurename parameter
     Maybe with Dialog super class that could handle the layout file loading
     and the event mappers (Ok/Cancel buttons)
     - [X] Can the layout name be a simple std::string?  Yes
@@ -187,7 +188,12 @@
     - [X] First, implement in a simple window
     - [X] Then handle the visibility
       with show(), hide() and isVisible() function
-    - [ ] We should handle the Ok button callback (simply hide this)
+    - [X] See how to correctly destroy the dialogwindow in CeguiDialog destructor
+      - [X] We first need to create the dialog from an event, to see
+	if creating it twice is a problem
+    - [X] We should handle the Ok button callback (simply hide this)
+      - [X] Handle the Ok button and close the dialog
+    - [ ] Correctly handle the destruction of CeguiDialog underlying window
 - [ ] Now, create the NyiDialog, based on CeguiDialog
   - [ ] Pass the featurename to named constructor
     and add this to the dialog text
