@@ -36,4 +36,5 @@ OVERALL TODO
    Add git tag r-1 when switching
    
 * v0.0.5-252 (28 Oct. 2016 - ???) SLOC ?,??? FT ???:?? UT ?
+- Makes the CeguiDialog Ok button hide the dialog
 - Implement CeguiDialog visibility
