@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><!--		-*-xml-*-    -->
 <GUILayout version="4">
   <!-- type was DefaultWindow -->
-  <Window type="Vanilla/StaticImage" name="Root" >
+  <Window type="Vanilla/StaticImage" name="nyiRoot" >
         <Property name="InheritsAlpha" value="False" />
-        <Property name="Size" value="{{1,0},{1,0}}" />
+        <Property name="Size" value="{{1,0},{1.0,0}}" />
+        <Property name="FrameEnabled" value="False" />
+	<Property name="BackgroundEnabled" value="False" />
+
         <Window type="TaharezLook/FrameWindow" name="winToolbar" >
             <Property name="Text" value="Not Yet Implemented feature" />
             <Property name="AlwaysOnTop" value="True" />
@@ -20,7 +23,6 @@
                 <Property name="Text" value="Ok" />
                 <Property name="MaxSize" value="{{1,0},{1,0}}" />
                 <Property name="Position" value="{{0.7,0},{0.82,0},{0.20,0},{0.20,0}}" />
-                <Property name="MouseCursorImage" value="set:TaharezLook image:MouseArrow" />
             </Window>
 
         </Window>
