@@ -1,3 +1,13 @@
+2016-10-29  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/CeguiDialog.cpp (onOk): hide the dialog on event.
+	* media/layouts/nyi_dialog.layout: remove background.
+	* src/client/GameEngine.cpp (onNetworkPlay) create a CeguiDoalog
+	instance and show it.
+	* src/client/GameEngine.cpp (onExit) cegui event callback returns
+	true value.
+	* src/client/GameEngine.cpp (Exit_OnClick) rename to onExit().
+
 2016-10-28  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/client/CeguiDialog.hpp (CeguiDialog): implement basic visibility
